# tawhiri-oldui-juryrig

./: .gitmodules  AUTHORS  README.md  hourly.py  hourly.supervisord.conf  predict.py  requirements.txt
cron/: crontab-example  prune-predictions-cronjob.sh
deploy/: hourly-editor.supervisord.conf  hourly.supervisord.conf  nginx-predict.conf  permissions  prune-predictions-cronjob.sh
hourly/: daemon.py  index.html  make_hourly.py  predict.html
hourly/css/: results.css
hourly/editor/: app.py  app.wsgi  uwsgi.yaml
hourly/editor/static/: bootstrap.css
hourly/editor/templates/: base.html  edit.html  login.html
hourly/js/: form.js  params.js  results.js
hourly/lib/: index.html  predicting.html
hourly/lib/js/: hourly.js
hourly/scenarios/: .gitignore  cambridge.json  example.dist.json
hourly/web/lib/js/: hourly.js
one-shot/: index.html
one-shot/css/: pred.css
one-shot/js/pred/: pred-params.js  pred.js
pred_src/: .gitignore  CMakeLists.txt  altitude.c  altitude.h  dataset.c  dataset.h  pred.c  pred.h  run_model.c  run_model.h  tawhiri_axes.c  tawhiri_axes.h
predict/: ajax.php  index.html  index.php  sites.json
predict/css/: pred.css
predict/includes/: config.inc.php  functions.inc.php
predict/js/pred/: pred-config.js  pred-event.js  pred-map.js  pred-params.js  pred-ui.js  pred.js
